# MP34U

./: CMakeLists.txt  README.md  main.cpp  sources
Dependencies/EasyIni/EasyIni/: EasyIni.hpp
Dependencies/SyriusCore/include/SyriusCore/: SyriusCore.hpp
Dependencies/SyriusCore/include/SyriusCore/Context/: ColorAttachment.hpp  ConstantBuffer.hpp  Context.hpp  DepthStencilAttachment.hpp  FrameBuffer.hpp  FramebufferDescription.hpp  IndexBuffer.hpp  Sampler.hpp  Shader.hpp  ShaderModule.hpp  Texture2D.hpp  Utils.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexDescription.hpp  Viewport.hpp
Dependencies/SyriusCore/include/SyriusCore/Core/: Message.hpp  PlatformAPI.hpp  PlatformDetection.hpp  SyriusCoreInclude.hpp
Dependencies/SyriusCore/include/SyriusCore/Dependencies/imgui/: imgui.h
Dependencies/SyriusCore/include/SyriusCore/Utils/: Image.hpp  Resource.hpp
Dependencies/SyriusCore/include/SyriusCore/Window/: SyriusWindow.hpp
Dependencies/SyriusCore/include/SyriusCore/Window/Event/: Event.hpp  KeyboardEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
src/: Include.hpp  MusicFile.cpp  MusicFile.hpp  Utils.hpp
src/Core/: Include.hpp  Json.hpp  PlatformDetection.hpp
src/Downloader/: DownloadFactory.cpp  DownloadFactory.hpp  Downloader.cpp  Downloader.hpp  PythonBridge.cpp  PythonBridge.hpp
src/FileTagger/: FileFactory.cpp  FileFactory.hpp  MusicFile.cpp  MusicFile.hpp  Utils.cpp  Utils.hpp
src/FileTagger/MP3/: ID3Frame.cpp  ID3Frame.hpp  ID3Tag.cpp  ID3Tag.hpp  MP3File.cpp  MP3File.hpp
src/GUI/: AbstractWindow.cpp  AbstractWindow.hpp  DownloadWindow.cpp  DownloadWindow.hpp  FileTaggerWindow.cpp  FileTaggerWindow.hpp  MP34UGui.cpp  MP34UGui.hpp  MenuWindow.cpp  MenuWindow.hpp
src/GUI/Installer/: InstallerGUI.cpp  InstallerGUI.hpp  InstallerPanel.cpp  InstallerPanel.hpp
src/MP3/: ID3Frame.cpp  ID3Frame.hpp  ID3FrameHeader.cpp  ID3FrameHeader.hpp  ID3Tag.cpp  ID3Tag.hpp  MP3File.cpp  MP3File.hpp
src/Utils/: MusicMetaData.hpp  ThreadPool.cpp  ThreadPool.hpp
